fix: 説明文を追加

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <div id="options-container">
       <h2>選択肢と重み</h2>
+      <p>
+        重みは選択肢が選ばれる確率を調整するための整数値です。<br />値が大きいほど選ばれやすくなります。
+      </p>
       <div id="options-list">
         <!-- 選択肢入力欄がここに追加されます -->
       </div>
