add: ogp画像を追加

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>重み付けルーレット</title>
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:title" content="重みづけルーレット" />
+    <meta
+      property="og:description"
+      content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
+    <meta property="og:image" content="ogp_image.png" />
+    <meta property="og:url" content="./" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
-    <h1>重み付けルーレット</h1>
+    <h1>重みづけルーレット</h1>
 
     <div id="options-container">
       <h2>選択肢と重み</h2>
