fix: 画像、URLのパスを絶対パスに修正

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta
       property="og:description"
       content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
-    <meta property="og:image" content="ogp_image.png" />
-    <meta property="og:url" content="./" />
+    <meta property="og:image" content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
+    <meta property="og:url" content="https://da-yoshi-k.github.io/roulette_sample/" />
     <meta property="og:type" content="website" />
   </head>
   <body>
