--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta property="og:image" content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
     <meta property="og:url" content="https://da-yoshi-k.github.io/roulette_sample/" />
     <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="重みづけルーレット" />
+    <meta name="twitter:description" content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
+    <meta name="twitter:image" content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
   </head>
   <body>
     <h1>重みづけルーレット</h1>
