fix: メタデータを修正

--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
     <meta
       property="og:description"
       content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
-    <meta property="og:image" content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
-    <meta property="og:url" content="https://da-yoshi-k.github.io/roulette_sample/" />
+    <meta
+      property="og:site_name"
+      content="重みづけルーレット - da-yoshi-k.github.io" />
+    <meta
+      property="og:image"
+      content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
+    <meta
+      property="og:url"
+      content="https://da-yoshi-k.github.io/roulette_sample/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@da_yoshi_k" />
     <meta name="twitter:title" content="重みづけルーレット" />
-    <meta name="twitter:description" content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
-    <meta name="twitter:image" content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
+    <meta
+      name="twitter:description"
+      content="重みづけルーレットは、選択肢に重みを付けてランダムに選ぶことができるツールです。" />
+    <meta
+      name="twitter:image"
+      content="https://da-yoshi-k.github.io/roulette_sample/ogp_image.png" />
   </head>
   <body>
     <h1>重みづけルーレット</h1>
